# mybench

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  dco.yml  release.yml
assets/brand/: generate_assets.py  generate_marks.py  social-copy.md  tokens.css
docs/: PROJECT_BRIEF.md  THREAT_MODEL.md  THREAT_MODEL_TRACEABILITY.md  arrival-pattern-taxonomy.md  claude-lifecycle-hooks.md  cli.md  context-management-profile.md  episode-outcome-closure.md  evidence-coverage.md  fingerprint-report-v2.md  forge-action-events.md  how-anchoring-works.md  local-identity-state.md  local-report-bundles.md  metrics-v0.md  model-role-profile.md  normalized-evidence.md  orchestration-delegation-metrics.md  privacy-self-audit.md  private-anchor-receipts.md  publication-preview-bundles.md  scheduled-capture.md  session-duration-agent-hours.md  session-metadata-adapters.md  status.md  token-cost-profile.md  wave1-transcript-scorers.md  workflow-map-scorer.md  workflow-phase-classifier-spike.md
docs/analysis/: short-content-dictionary-attack.md
packaging/mybench-verify/: README.md  pyproject.toml
packaging/npm/: README.md  package.json
schemas/: ledger_entry.schema.json  report.schema.json
src/mybench/: __init__.py  __main__.py  archive.py  capture_identity.py  cli.py  commitment_tree.py  commitments.py  identity.py  leakscan.py  ledger.py  nonce_generation.py  nonces.py  (+6 more)
tests/: conftest.py  test_cli.py  test_commitments.py  test_ledger.py  test_nonces.py  test_packaging.py  test_paths.py  test_paths_smoke.py  test_report_v2_schema_spec.py  test_scan_config.py  test_scheduler.py  test_schemas_smoke.py  test_status.py
(+173 files in other folders)
