[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mybench"
version = "0.1.0"
description = "Privacy-preserving developer attestation system"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = ["jsonschema>=4.0", "cryptography>=49.0", "opentimestamps>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mybench = ["schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
